--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
     "cookie-parser": "^1.4.6",
