--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "bootstrap-icons": "^1.10.5",
     "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
@@ -14,6 +15,7 @@
     "lru-cache": "^11.0.0",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
-    "promise-mysql": "^5.2.0"
+    "promise-mysql": "^5.2.0",
+    "tunnel-ssh": "^5.1.2"
   }
 }
