--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
     "promise-mysql": "^5.2.0",
-    "tunnel-ssh": "^5.1.2"
+    "tunnel-ssh": "^5.1.2",
+    "winston": "^3.15.0"
+  },
+  "devDependencies": {
+    "prettier": "^3.3.3"
   }
 }
